# Final_proj7

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/: send_messages.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_recipient_options.py
mailing/templates/mailing/: home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  statistics.html
mailing/templates/mailing/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_is_blocked.py  0004_alter_user_options.py
users/templates/: login.html
users/templates/users/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  user_form.html
